Input Systems Settings - remove input system
Former-commit-id: e10698b70c6fa64f5c197325c6363974bb8543e7

--- a/src/angular-app/languageforge/lexicon/views/input-systems.html
+++ b/src/angular-app/languageforge/lexicon/views/input-systems.html
@@ -30,7 +30,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="well">
+		<div class="well" data-ng-show="inputSystems[currentInputSystemTag]">
 			<div class="pull-right">
 				<br />
 				<label class="control-label">{{currentInputSystemTag}}</label>
