wip: new Input System directive
Former-commit-id: c3a13ca1a53d427bad62b5a8d7dc5c7b9a62f135

--- a/src/angular-app/languageforge/lexicon/views/input-systems.html
+++ b/src/angular-app/languageforge/lexicon/views/input-systems.html
@@ -4,7 +4,9 @@
 	<div class="span3">
 		<!-- control buttons -->
 		<div class="control-group pagination-centered">
-			<button class="btn btn-success" data-ng-click="newUserCollapsed = !newUserCollapsed"><i class="icon-plus"></i>New Language</button>
+			<pui-select-language-drop pui-btn-type="btn-success">
+				New <span class="caret"></span>
+			</pui-select-language-drop>
 		</div>
 		<div class="control-group picklists">
 			<ul class="unstyled">
