--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -84,7 +84,7 @@
 		</div>
 		
 		</div>
-<pre data-ng-show="showPre">
+<pre data-ng-show="false">
 currentField.inputSystems {{currentField.inputSystems | json}}
 config.entry {{config.entry|json}}
 </pre>
@@ -200,7 +200,7 @@ config.entry {{config.entry|json}}
 		</div>
 		
 		</div>
-<pre data-ng-show="showPre">
+<pre data-ng-show="false">
 config.tasks['{{currentTaskName}}'] = {{config.tasks[currentTaskName] | json}}
 </pre>
 		</div>
