--- a/src/angular-app/languageforge/lexicon/views/input-systems.html
+++ b/src/angular-app/languageforge/lexicon/views/input-systems.html
@@ -10,7 +10,7 @@
 			<div class="overlay" data-ng-show="show.newLanguage">
 				<div class="lf-dropdown-menu">
 					<pui-select-language pui-code="newCode" pui-language="newlanguage" pui-add-disabled="addDisabled">
-						<button class="btn btn-primary" data-ng-click="addInputSystem(newCode, '')" data-ng-disabled="addDisabled"><i class="icon-plus"></i> Add {{newlanguage.name}}</button>
+						<button class="btn btn-primary" data-ng-click="addInputSystem(newCode, 'none')" data-ng-disabled="addDisabled"><i class="icon-plus"></i> Add {{newlanguage.name}}</button>
 					</pui-select-language>
 				</div>
 			</div>
@@ -45,13 +45,13 @@
 				<label class="control-label">{{currentInputSystemTag}}</label>
 			</div>
 			<h3>{{inputSystems[currentInputSystemTag].name}}</h3>
-			<p>{{inputSystems[currentInputSystemTag].fieldUseCount}} entry field{{(inputSystems[currentInputSystemTag].fieldUseCount == 1) ? ' is' : 's are'}} using this system</p>
 			<div class="control-group">
 				<label class="control-label" for="abbrev">Abbreviation</label>
 				<div class="controls">
 					<input type="text" id="abbrev" data-ng-model="inputSystems[currentInputSystemTag].abbreviation">
 				</div>
 			</div>
+			<p data-ng-show="inputSystems[currentInputSystemTag].fieldUseCount > 0">Some settings are disabled because {{inputSystems[currentInputSystemTag].fieldUseCount}} entry field{{(inputSystems[currentInputSystemTag].fieldUseCount == 1) ? ' is' : 's are'}} using this system</p>
 			<div class="control-group">
 				<label class="control-label" for="special">Special</label>
 				<div class="controls">
